--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ streamlit
 streamlit_extras
 datetime
 streamlit-screen-stats
+st-screen-stats 
+streamlit-browser-session-storage 
+streamlit-local-storage
